Optimized and validated PLINK import